# nlp-dump

./: LICENSE  README.md  dump.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
tests/: test_dump.py
