[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-dump"
version = "0.1.0"
description = "SpaCy dump tool for processing text files"
authors = [{name = "Sean Evans"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "spacy>=3.0,<4.0",
    "lxml>=4.0,<5.0",
    "numpy>=1.20,<2.0",
]

[project.scripts]
nlp-dump = "dump:main"

[tool.setuptools]
py-modules = ["dump"]

